--- a/ekstensi.ipynb
+++ b/ekstensi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4siZ8nXLzC9151OFV9/3L",
+      "authorship_tag": "ABX9TyOrOay+T8L7g6HfPZArbxO/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,62 +28,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oxCd49oFsY16",
-        "outputId": "1fc15420-96bc-4304-e8f2-83224f842715"
+        "outputId": "7f0e30df-98eb-49f2-accf-64262c4f18e2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'brand': 'Ford', 'model': 'Focus', 'year': 2008, 'number_of_doors': 5, 'number_of_wheels': 4}\n",
-            "{'brand': 'Honda', 'model': 'Scoopy', 'year': 2018, 'number_of_wheels': 2}\n",
-            "vehicle is starting\n",
-            "vehicle is starting\n"
+            "Area: 6\n",
+            "Area: 78.5\n"
           ]
         }
       ],
       "source": [
-        "#make class Vehicle\n",
-        "class Vehicle:\n",
-        "\tdef __init__(self, brand, model, year):\n",
-        "\t\tself.brand = brand\n",
-        "\t\tself.model = model\n",
-        "\t\tself.year = year\n",
+        "class Shape:\n",
+        "    def area(self):\n",
+        "        return \"Undefined\"\n",
         "\n",
-        "#make methods\n",
-        "\tdef start(self):\n",
-        "\t\tprint(\"vehicle is starting\")\n",
-        "\tdef stop(self):\n",
-        "\t\tprint(\"vehicle is stopping\")\n",
-        "#define sub class and make class Car (inheritance from Vehicle)\n",
-        "# the super() to call method __init__() from class Vehicle\n",
-        "class Car(Vehicle):\n",
-        "\tdef __init__(self, brand, model, year, number_of_doors, number_of_wheels):\n",
-        "\t\tsuper().__init__(brand, model, year)\n",
-        "\t\tself.number_of_doors= number_of_doors\n",
-        "\t\tself.number_of_wheels=number_of_wheels\n",
+        "class Rectangle(Shape):\n",
+        "    def __init__(self, length, width):\n",
+        "        self.length = length\n",
+        "        self.width = width\n",
         "\n",
-        "#make class Bike (inheritance from Vehicle)\n",
-        "class Bike(Vehicle):\n",
-        "\tdef __init__(self, brand, model, year, number_of_wheels):\n",
-        "\t\tsuper().__init__(brand, model, year)\n",
-        "\t\tself.number_of_wheels=number_of_wheels\n",
+        "    def area(self):\n",
+        "        return self.length * self.width\n",
         "\n",
-        "#make object\n",
-        "car = Car(\"Ford\", \"Focus\", 2008, 5, 4)\n",
-        "bike = Bike(\"Honda\", \"Scoopy\", 2018, 2)\n",
-        "#print attribute dan method\n",
-        "print(car.__dict__)\n",
-        "print(bike.__dict__)\n",
-        "car.start()\n",
-        "bike.start()\n",
-        ""
+        "class Circle(Shape):\n",
+        "    def __init__(self, radius):\n",
+        "        self.radius = radius\n",
+        "\n",
+        "    def area(self):\n",
+        "        return 3.14 * self.radius ** 2\n",
+        "\n",
+        "shapes = [Rectangle(2, 3), Circle(5)]\n",
+        "for shape in shapes:\n",
+        "    print(f\"Area: {shape.area()}\")\n",
+        "\n"
       ]
     }
   ]
